     CHANGES in PHANGORN VERSION 2.3.0

NEW FEATURES

    o new function mast to compute the maximum agreement subtree

    o densiTree got more attributes
    
    o unique.dist, to filter duplicate distances 
    
    o ancestral.pml and ancestral.pars are now may return proper phyDat objects

      and in for DNA may return ambiguous states

BUG FIXES

    o densiTree may if the consensus tree had different ordering of labels
 
OTHER CHANGES

    o acctran allows multiPhylo objects as input
    
    o rNNI has been completely rewritten and is faster


     CHANGES in PHANGORN VERSION 2.2.0

NEW FEATURES

    o midpoint in now generic and works for multiPhylo objects

    o as.bitsplits.splits to better interact with ape

BUG FIXES

    o bug fix in RI and CI for ambiguous data  

OTHER CHANGES

    o added roxygen2 documentation, so R code is now much better documented,
    
      reorganisation of some documentation
    
    o many more unit tests


     CHANGES in PHANGORN VERSION 2.1.0

NEW FEATURES

    o new functions to compute the (approximate) SPR distance (sprdist, SPR.dist)
    
      contributed by Leonardo de Oliveira Martins.

    o super tree methods based on NNI and SPR distances

BUG FIXES

    o fixed bug in KF.dist  

OTHER CHANGES

    o improvements to as.networx. It often now produces networks with less edges 
   
      resulting in much nicer plots 

    o plot.networx does take a different layout algorithm 

    o as.data.frame.phyDat and as.character.phyDat return amino acids 
    
      now in upper cases

    o more unit tests

    o improved cbind.phyDat, faster and more flexible
    
    o phangorn now requires ape 4.0
    
    o phangorn now imports Rcpp, but not nnls any more 
    
    

    CHANGES in PHANGORN VERSION 2.0.4
     
NEW FEATURES

    o new weighted Robinson-Foulds (1979) distance wRF, suggested by Michelle Kendall
    
      and normalized Robinson-Foulds suggested by Sereina Rutschmann
